@@ -1,3 +1,7 @@
+Added yaz-client command querycharset which specifies character set for
+query terms for Z39.50 RPN queries and Z39.50 Scan Requests
+(termListAndStartPoint).
+
 Charset ISO5428:1984 is an alias for ISO5428-1984.
 
 Implemented a way to perform scan in a result set using Z39.50. This
